apps/efak/50.Service.yml
kind: Service
apiVersion: v1
metadata:
  name: efak
  namespace: efak
  labels:
    app.kubernetes.io/component: efak
    app.kubernetes.io/name: efak
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: efak
  selector:
    app.kubernetes.io/component: efak
    app.kubernetes.io/name: efak
  sessionAffinity: None
  type: ClusterIP
